tests/ui/lazy-type-alias/extern-crate-has-lazy-type-aliases.locally_eager.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/extern-crate-has-lazy-type-aliases.rs:15:24
   |
LL |     let _: lazy::Alias<String>;
   |                        ^^^^^^ the trait `Copy` is not implemented for `String`
   |
help: item with same name found
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/ffi/os_str.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
note: required by a bound in `lazy::Alias`
  --> $DIR/auxiliary/lazy.rs:3:19
   |
LL | pub type Alias<T: Copy> = Option<T>;
   |                   ^^^^ required by this bound in `Alias`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
